--- a/enginext1.css
+++ b/enginext1.css
@@ -1,24 +1,27 @@
     .enginext1-body {
-    	background-color: #F8FCFF;
-    	color: black;
+    	color: white;
     	height: auto;
     	min-height: 100%;
-    	font-size: clamp(18px, 1.8vw, 30px);
-    	padding: 4vw 4vw;
-    	/* vertikalne horizontalne*/
+    	font-size: clamp(16px, 1.6vw, 30px);
+    	padding: 1vw 2vw;
     	box-sizing: border-box;
+    	background:
+    		linear-gradient(to right,
+    			rgba(0, 0, 0, 0) 0%,
+    			rgba(0, 0, 0, 0.5) 100%),
+    		#3878C0;
+    	background-blend-mode: multiply;
     }
 
     .enginext1-header-line {
     	width: 100%;
     	height: 1px;
-    	background-color: #00C;
+    	background-color: #999;
     }
 
     .enginext1-content {
     	display: flex;
     	flex-direction: row;
-    	/* width: 100vw; */
     	width: auto;
     	box-sizing: border-box;
     	padding: 1vw;
@@ -27,31 +30,30 @@
 
     /**************************************************************************/
     .enginext1-right {
-    	flex: 4;
-    	/* background: #eef; */
+    	flex: 5;
     	display: flex;
     	flex-direction: column;
     	justify-content: top;
-    	/* center; */
-    	padding: 20px;
+    	padding: 1vw;
     	box-sizing: border-box;
     }
 
-    .enginext1-empty-line-with-img {
+    .enginext1-line-with-img {
     	display: flex;
-    	justify-content: flex-end;
-    	/* obrázok vpravo */
-    	align-items: center;
-    	/* vertikálne zarovnanie */
-    	height: 1.5em;
-    	/* výška „riadku“ */
+    	justify-content: space-between;
+    	align-items: flex-end;
+    	padding-bottom: 1vw;
+    	box-sizing: border-box;
     }
 
-    .enginext1-empty-line-with-img img {
-    	height: 50px;
-    	/* malý obrázok */
+    .enginext1-line-with-img h2 {
+    	margin: 0;
+    }
+
+    .enginext1-line-with-img img {
+    	height: 5vw;
     	width: auto;
-    	/* zachovať pomer strán */
+    	filter: invert(1) brightness(0.8);
     }
 
     .enginext1-right strong {
@@ -61,18 +63,14 @@
     .enginext1-right-last {
     	display: flex;
     	align-items: center;
-    	/* vertikálne zarovnanie textu s obrázkom */
     	gap: 20px;
-    	/* medzera medzi textom a obrázkom */
     	flex-wrap: nowrap;
     }
 
     .enginext1-last p {
     	margin: 0;
-    	/* odstrániť defaultné odsadenie */
     }
 
-    /* Základ pre zoznam: odstránime defaultné odsadenie a medzery */
     .enginext1-custom-list {
     	list-style: none;
     	padding: 0;
@@ -80,43 +78,32 @@
     }
 
     .enginext1-custom-list li {
-    	/* Žiadne zbytočné vertikálne medzery medzi riadkami */
     	margin: 0;
     	padding: 0;
     	line-height: 1.4;
-    	/* môže sa upraviť podľa potreby */
     	position: relative;
     }
 
-    /* Vlastná odrážka: plná guľka, vertikálne centrovaná */
     .enginext1-custom-list li::before {
     	content: "●";
-    	/* Veľkosť a umiestnenie */
     	display: inline-block;
     	width: 1em;
-    	/* rezerva pre odrážku */
     	margin-right: 2ch;
-    	/* odsadenie textu od gulky ~ šírka dvoch písmen */
-    	/* Vertikálne centrovanie s textom */
     	font-size: 0.9em;
-    	/* prípadne doladiť podľa vizuálu */
     	line-height: 1;
     	vertical-align: middle;
     	color: currentColor;
-    	/* dedí farbu textu */
     }
 
     /**************************************************************************/
     .enginext1-more-info-container {
     	text-align: right;
-    	/* zarovnanie obsahu doprava */
     }
 
     /**************************************************************************/
     .enginext1-divider {
     	width: 1px;
-    	background-color: #00C;
-    	/* margin: 0 10px; */
+    	background-color: #999;
     }
 
     /**************************************************************************/
@@ -125,23 +112,21 @@
     	overflow: hidden;
     	padding: 1vw;
     	box-sizing: border-box;
-    	/* background: #efe; */
     }
 
-    .enginext1-left-group {
-    	position: relative;
-    	aspect-ratio: 1 / 1;
+    .enginext1-img-wrapper {
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
     	width: 100%;
-    	max-width: 600px;
-    	justify-self: center;
-    	align-self: center;
+    	height: 100%;
+    	overflow: hidden;
     }
 
-    .enginext1-img1 {
-    	position: absolute;
-    	width: 100%;
-    	top: 10%;
-    	left: 0%;
+    .enginext1-img-wrapper img {
+    	max-width: 100%;
+    	max-height: 100%;
+    	object-fit: contain;
     }
 
     /**************************************************************************/
@@ -151,14 +136,14 @@
     		height: auto;
     	}
 
+    	.enginext1-line-with-img img {
+    		height: 7vw;
+    	}
+
     	.enginext1-divider {
     		width: 100%;
     		height: 1px;
     		margin: 0 0;
-    	}
-
-    	.enginext1-img1 {
-    		width: 80%;
-    		left: 10%;
+    		display: none;
     	}
     }
