--- a/enginint1.css
+++ b/enginint1.css
@@ -5,7 +5,7 @@
     	font-size: clamp(16px, 1.6vw, 30px);
     	display: flex;
     	flex-direction: column;
-    	padding: 1vw 1vw;
+    	padding: 1vw 2vw;
     	box-sizing: border-box;
     }
 
@@ -26,6 +26,11 @@
     	margin-bottom: 0.4em;
     }
 
+	.enginint1-great-p {
+      font-size: 2.3vw;
+      line-height: 1.6;
+	}
+
     .enginint1-header-line {
     	width: 100%;
     	height: 1px;
@@ -35,7 +40,7 @@
     .enginint1-content {
     	flex: 1;
     	display: flex;
-    	padding-top: 20px;
+    	padding-top: 1vw;
     }
 
     /******************************************************************/
@@ -45,6 +50,7 @@
     	flex-direction: column;
     	justify-content: center;
     	align-items: center;
+		padding: 1vw;
     	box-sizing: border-box;
     }
 
@@ -159,6 +165,7 @@
     		width: 95%;
     		height: 1px;
     		margin: 0 0;
+			display: none;
     	}
 
     	.enginint1-right {
