--- a/enginint2.css
+++ b/enginint2.css
@@ -1,149 +1,154 @@
     .enginint2-body {
-      background-color: white;
-      color: black;
-      height: auto;
-      min-height: 100%;
-      font-size: clamp(18px, 1.8vw, 30px);
-      padding: 4vw 4vw; /* vertikalne horizontalne*/
-      box-sizing: border-box;
+    	background-color: #ECF6FF;
+    	color: black;
+    	height: auto;
+    	min-height: 100%;
+    	font-size: clamp(16px, 1.6vw, 30px);
+    	padding: 1vw 2vw;
+    	/* vertikalne horizontalne*/
+    	box-sizing: border-box;
     }
+
     .enginint2-header-line {
-      width: 100%;
-      height: 1px;
-      background-color: #00C;
+    	width: 100%;
+    	height: 1px;
+    	background-color: #00C;
     }
 
     .enginint2-content {
-      display: flex;
-      flex-direction: row;
-      /* width: 100vw; */
-      width: auto;
-      box-sizing: border-box;
-      padding: 1vw;
-      gap: 1vw;
+    	display: flex;
+    	flex-direction: row;
+    	/* width: 100vw; */
+    	width: auto;
+    	box-sizing: border-box;
+    	padding: 1vw;
+    	gap: 1vw;
     }
 
-/**************************************************************************/
+    /**************************************************************************/
     .enginint2-left {
-      flex: 4;
-      /* background: #eef; */
-      display: flex;
-      flex-direction: column;
-      justify-content: top; /* center; */
-      padding: 20px;
-      box-sizing: border-box;
+    	flex: 5;
+    	display: flex;
+    	flex-direction: column;
+    	justify-content: top;
+    	padding: 1vw;
+    	box-sizing: border-box;
     }
-    .enginint2-empty-line-with-img {
-      display: flex;
-      justify-content: flex-end; /* obrázok vpravo */
-      align-items: center;       /* vertikálne zarovnanie */
-      height: 1.5em;              /* výška „riadku“ */
+
+    .enginint2-line-with-img {
+    	display: flex;
+    	justify-content: space-between;
+    	align-items: flex-end;
+		padding-bottom: 1vw; 
+    	box-sizing: border-box;
     }
-    .enginint2-empty-line-with-img img {
-      height: 50px;               /* malý obrázok */
-      width: auto;                 /* zachovať pomer strán */
+
+    .enginint2-line-with-img h2 {
+    	margin: 0;
     }
+
+    .enginint2-line-with-img img {
+    	height: 5vw;
+    	width: auto;
+    }
+
     .enginint2-left strong {
-      font-weight: bold;
+    	font-weight: bold;
     }
+
     .enginint2-left-last {
-        display: flex;
-        align-items: center;       /* vertikálne zarovnanie textu s obrázkom */
-        gap: 20px;                 /* medzera medzi textom a obrázkom */
-        flex-wrap: nowrap;
+    	display: flex;
+    	align-items: center;
+    	gap: 20px;
+    	flex-wrap: nowrap;
     }
+
     .enginint2-last p {
-        margin: 0; /* odstrániť defaultné odsadenie */
+    	margin: 0;
     }
-/* Základ pre zoznam: odstránime defaultné odsadenie a medzery */
+
     .enginint2-custom-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+    	list-style: none;
+    	padding: 0;
+    	margin: 0;
     }
 
     .enginint2-custom-list li {
-      /* Žiadne zbytočné vertikálne medzery medzi riadkami */
-      margin: 0;
-      padding: 0;
-      line-height: 1.4; /* môže sa upraviť podľa potreby */
-      position: relative;
+    	margin: 0;
+    	padding: 0;
+    	line-height: 1.4;
+    	position: relative;
     }
 
-    /* Vlastná odrážka: plná guľka, vertikálne centrovaná */
     .enginint2-custom-list li::before {
-      content: "●";
-      /* Veľkosť a umiestnenie */
-      display: inline-block;
-      width: 1em; /* rezerva pre odrážku */
-      margin-right: 2ch; /* odsadenie textu od gulky ~ šírka dvoch písmen */
-      /* Vertikálne centrovanie s textom */
-      font-size: 0.9em; /* prípadne doladiť podľa vizuálu */
-      line-height: 1; 
-      vertical-align: middle;
-      color: currentColor; /* dedí farbu textu */
+    	content: "●";
+    	display: inline-block;
+    	width: 1em;
+    	margin-right: 2ch;
+    	font-size: 0.9em;
+    	line-height: 1;
+    	vertical-align: middle;
+    	color: currentColor;
     }
 
     /**************************************************************************/
     .enginint2-more-info-container {
-      text-align: right; /* zarovnanie obsahu doprava */
+    	text-align: right;
     }
 
     /**************************************************************************/
     .enginint2-divider {
-      width: 1px;
-      background-color: #00C;
-      /* margin: 0 10px; */
+    	width: 1px;
+    	background-color: #00C;
     }
 
     /**************************************************************************/
     .enginint2-right {
-      flex: 5;
-      overflow: hidden;
-      padding: 1vw;
-      box-sizing: border-box;
-      /* background: #efe; */
+    	flex: 5;
+    	overflow: hidden;
+    	padding: 1vw;
+    	box-sizing: border-box;
     }
-    .enginint2-right-group  {
-      position: relative;
-      aspect-ratio: 1 / 1; 
-      width: 100%;
-      max-width: 600px;
-      justify-self: center;
-      align-self: center;
-      /* background: #fee; */
-      /* padding: 1vw; */
+
+    .enginint2-img-wrapper {
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    	width: 100%;
+    	height: 100%;
+    	overflow: hidden;
     }
-    .enginint2-img1 {
-        position: absolute;
-        width: 80%;
-        top: 0%;
-        left: 0%;
+
+    .enginint2-img-wrapper img {
+    	max-width: 100%;
+    	max-height: 100%;
+    	object-fit: contain;
+    	clip-path: inset(0.5% 0 0.5% 0);
     }
-    .enginint2-img2 {
-        position: absolute;
-        width: 60%;
-        top: 52%;
-        left: 0%;
-    }
+
     /**************************************************************************/
     @media (max-width: 762px) {
-        .enginint2-content {
-           flex-direction: column;
-           height: auto;
-        }
-        .enginint2-divider {
-            width: 100%;
-            height: 1px;
-            margin: 0 0;
-        }
-        .enginint2-img1 {
-          /* width: 60%; */
-          left:10%;
-        }
-        .enginint2-img2 {
-          /* width: 45%; */
-          left:10%;
-          /* top: 39%; */
-        }
-    }    
+    	.enginint2-content {
+    		flex-direction: column;
+    		height: auto;
+    	}
+
+    	.enginint2-line-with-img img {
+    		height: 7vw;
+    	}
+
+    	.enginint2-divider {
+    		width: 100%;
+    		height: 1px;
+    		margin: 0 0;
+    		display: none;
+    	}
+
+    	.enginint2-img1 {
+    		left: 10%;
+    	}
+
+    	.enginint2-img2 {
+    		left: 10%;
+    	}
+    }
