--- a/enginint4.css
+++ b/enginint4.css
@@ -1,152 +1,164 @@
     .enginint4-body {
-      background-color: white;
-      color: black;
-      height: auto;
-      min-height: 100%;
-      font-size: clamp(18px, 1.8vw, 30px);
-      padding: 4vw 4vw; /* vertikalne horizontalne*/
-      box-sizing: border-box;
+    	/* background-color: #ECF6FF; */
+    	color: black;
+    	height: auto;
+    	min-height: 100%;
+    	font-size: clamp(16px, 1.6vw, 30px);
+    	padding: 1vw 2vw;
+    	box-sizing: border-box;
+    	background:
+    		linear-gradient(to right,
+    			rgba(0, 0, 0, 0) 0%,
+    			rgba(0, 0, 0, 0.03) 100%),
+    		#ECF6FF;
+    	background-blend-mode: multiply;
     }
+
     .enginint4-header-line {
-      width: 100%;
-      height: 1px;
-      background-color: #00C;
+    	width: 100%;
+    	height: 1px;
+    	background-color: #00C;
     }
 
     .enginint4-content {
-      display: flex;
-      flex-direction: row;
-      /* width: 100vw; */
-      width: auto;
-      box-sizing: border-box;
-      padding: 1vw;
-      gap: 1vw;
+    	display: flex;
+    	flex-direction: row;
+    	width: auto;
+    	box-sizing: border-box;
+    	padding: 1vw;
+    	gap: 1vw;
     }
 
-/**************************************************************************/
+    /**************************************************************************/
     .enginint4-right {
-      flex: 4;
-      /* background: #eef; */
-      display: flex;
-      flex-direction: column;
-      justify-content: top; /* center; */
-      padding: 20px;
-      box-sizing: border-box;
+    	flex: 5;
+    	display: flex;
+    	flex-direction: column;
+    	justify-content: top;
+    	padding: 1vw;
+    	box-sizing: border-box;
     }
-    .enginint4-empty-line-with-img {
-      display: flex;
-      justify-content: flex-end; /* obrázok vpravo */
-      align-items: center;       /* vertikálne zarovnanie */
-      height: 1.5em;              /* výška „riadku“ */
+
+    .enginint4-line-with-img {
+    	display: flex;
+    	justify-content: space-between;
+    	align-items: flex-end;
+		padding-bottom: 1vw; 
+    	box-sizing: border-box;
     }
-    .enginint4-empty-line-with-img img {
-      height: 60px;               /* malý obrázok */
-      width: auto;                 /* zachovať pomer strán */
+
+    .enginint4-line-with-img h3 {
+    	margin: 0;
     }
+
+    .enginint4-line-with-img img {
+    	height: 5vw;
+    	width: auto;
+    }
+
     .enginint4-right strong {
-      font-weight: bold;
+    	font-weight: bold;
     }
+
     .enginint4-right-last {
-        display: flex;
-        align-items: center;       /* vertikálne zarovnanie textu s obrázkom */
-        gap: 20px;                 /* medzera medzi textom a obrázkom */
-        flex-wrap: nowrap;
+    	display: flex;
+    	align-items: center;
+    	gap: 20px;
+    	flex-wrap: nowrap;
     }
+
     .enginint4-last p {
-        margin: 0; /* odstrániť defaultné odsadenie */
+    	margin: 0;
     }
-/* Základ pre zoznam: odstránime defaultné odsadenie a medzery */
+
     .enginint4-custom-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+    	list-style: none;
+    	padding: 0;
+    	margin: 0;
     }
 
     .enginint4-custom-list li {
-      /* Žiadne zbytočné vertikálne medzery medzi riadkami */
-      margin: 0;
-      padding: 0;
-      line-height: 1.4; /* môže sa upraviť podľa potreby */
-      position: relative;
+    	margin: 0;
+    	padding: 0;
+    	line-height: 1.4;
+    	position: relative;
     }
 
-    /* Vlastná odrážka: plná guľka, vertikálne centrovaná */
     .enginint4-custom-list li::before {
-      content: "●";
-      /* Veľkosť a umiestnenie */
-      display: inline-block;
-      width: 1em; /* rezerva pre odrážku */
-      margin-right: 2ch; /* odsadenie textu od gulky ~ šírka dvoch písmen */
-      /* Vertikálne centrovanie s textom */
-      font-size: 0.9em; /* prípadne doladiť podľa vizuálu */
-      line-height: 1; 
-      vertical-align: middle;
-      color: currentColor; /* dedí farbu textu */
+    	content: "●";
+    	display: inline-block;
+    	width: 1em;
+    	margin-right: 2ch;
+    	font-size: 0.9em;
+    	line-height: 1;
+    	vertical-align: middle;
+    	color: currentColor;
     }
 
     /**************************************************************************/
     .enginint4-more-info-container {
-      text-align: right; /* zarovnanie obsahu doprava */
+    	text-align: right;
     }
 
     /**************************************************************************/
     .enginint4-divider {
-      width: 1px;
-      background-color: #00C;
-      /* margin: 0 10px; */
+    	width: 1px;
+    	background-color: #00C;
     }
 
     /**************************************************************************/
     .enginint4-left {
-      flex: 5;
-      overflow: hidden;
-      padding: 1vw;
-      box-sizing: border-box;
-      /* background: #efe; */
+    	flex: 5;
+    	overflow: hidden;
+    	padding: 1vw;
+    	box-sizing: border-box;
     }
-    .enginint4-left-group  {
-      position: relative;
-      aspect-ratio: 1 / 1; 
-      width: 100%;
-      max-width: 600px;
-      justify-self: center;
-      align-self: center;
-      /* background-color: #CCFFCC; */
+
+	.enginint4-img-wrapper {
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    	width: 100%;
+    	height: 100%;
+    	overflow: hidden;
     }
-    .enginint4-img1 {
-        position: absolute;
-        width: 100%;
-        top: 0%;
-        left: 0%;
+
+    .enginint4-img-wrapper img {
+    	max-width: 100%;
+    	max-height: 100%;
+    	object-fit: contain;
     }
-    .enginint4-img2 {
-        position: absolute;
-        width: 50%;
-        top: 55%;
-        left: 25%; 
-    }   
+
     /**************************************************************************/
     @media (max-width: 762px) {
-        .enginint4-left {
-          flex: 3;
-        }
-        .enginint4-content {
-           flex-direction: column-reverse;
-           height: auto;
-        }
-        .enginint4-divider {
-            width: 100%;
-            height: 1px;
-            margin: 0 0;
-        }
-        .enginint4-img1 {
-          width: 100%;
-          left:0%;
-        }
-        .enginint4-img2 {
-          width: 40%;
-          top: 55%;
-          left:30%;
-          /* border: 1px dashed red; */
-        }
-    }    
+    	.enginint4-left {
+    		flex: 3;
+    	}
+
+    	.enginint4-content {
+    		flex-direction: column-reverse;
+    		height: auto;
+    	}
+
+	    .enginint2-line-with-img img {
+	    	height: 7vw;
+		}
+
+    	.enginint4-divider {
+    		width: 100%;
+    		height: 1px;
+    		margin: 0 0;
+    		display: none;
+    	}
+
+    	.enginint4-img1 {
+    		width: 100%;
+    		left: 0%;
+    	}
+
+    	.enginint4-img2 {
+    		width: 40%;
+    		top: 55%;
+    		left: 30%;
+    	}
+    }
