--- a/kontakt3.css
+++ b/kontakt3.css
@@ -7,14 +7,14 @@
     }
 
     .kontakt3-title {
-		margin-left: 1vw;
+    	margin-left: 1vw;
     	margin-bottom: 1vw;
     }
 
     .kontakt3-line {
     	height: 1px;
     	background-color: #999;
-		width: 100%;
+    	width: 100%;
     }
 
     .kontakt3-grid {
@@ -27,12 +27,18 @@
 
     .kontakt3-grid-img {
     	display: grid;
-    	grid-template-columns: 200px 3fr;
+    	grid-template-columns: repeat(4, 200px);
     	max-width: 850px;
     	padding: 10px;
     	gap: 10px;
     }
 
+    .kontakt3-grid-img .img-special-span {
+    	grid-column: 2 / 4;
+    	/* 2. a 3. stlpec, 1/-1 by bolo prvy az posledny stlpec */
+    }
+
+    /*********************************************************************************/
     .kontakt3-cell {
     	display: flex;
     	flex-direction: column;
@@ -61,8 +67,8 @@
     	align-items: bottom;
     	justify-content: bottom;
     	overflow: hidden;
-		max-width: 620px;
-		/* border: 1px dashed red; */
+    	/* max-width: 620px; */
+    	/* border: 1px dashed red; */
     }
 
     .kontakt3-image {
@@ -73,13 +79,60 @@
     	display: block;
     }
 
+    /*********************************************************************************/
+    .kontakt3-invoice-data {
+    	/* font-family: Arial, sans-serif; */
+    	max-width: 850px;
+    	padding: 16px;
+    	border: 1px solid #ccc;
+    	border-radius: 8px;
+    	background: #fafafa;
+    	margin-top: 1vw;
+    	box-sizing: border-box;
+    }
+
+    .kontakt3-invoice-data .section-title {
+    	font-weight: bold;
+    	font-size: 1.2em;
+    	margin-bottom: 12px;
+    }
+
+    .kontakt3-invoice-data p {
+    	margin: 2px 0;
+    }
+
+    .kontakt3-invoice-data .label {
+    	font-weight: bold;
+    	margin-right: 6px;
+    }
+
+    .kontakt3-invoice-data .value {
+    	font-weight: normal;
+    }
+
+    .kontakt3-invoice-data .line-gap {
+    	height: 1vw;
+    }
+
+    /*********************************************************************************/
     @media (max-width: 900px) {
-    	.kontakt3-grid {
+    	.kontakt3-grid,
+		.kontakt3-grid-img {
     		grid-template-columns: repeat(2, 200px);
     	}
-		.kontakt3-cell-img {
-			max-width: 420px;
-		}
+
+    	.kontakt3-grid-img .img-special-span  {
+    		grid-column: 1 / -1;
+    		/* prvy az druhy stlpec */
+    	}
+
+    	/* .kontakt3-cell-img {
+    		max-width: 420px;
+    	} */
+
+    	.kontakt3-invoice-data {
+    		margin-right: 6px;
+    	}
     }
 
     @media (max-width: 480px) {
@@ -87,14 +140,10 @@
     		font-size: 0.7rem;
     	}
 
-    	.kontakt3-grid {
-    		grid-template-columns: repeat(2, 143px);
-			padding: 0;
-			padding-bottom: 10px;
-    	}
-
+    	.kontakt3-grid,
 		.kontakt3-grid-img {
-			grid-template-columns: 143px 3fr;
-			padding: 0, 0, 6px, 0;
-		}
+    		grid-template-columns: repeat(2, 143px);
+    		padding: 0;
+    		padding-bottom: 10px;
+    	}		
     }
