--- a/ref.css
+++ b/ref.css
@@ -10,7 +10,7 @@
     }
 
     .ref-popis {
-      text-align: center;
+      text-align: left;
       /* color: #777; */
       color: black;
     }
