--- a/ref3.css
+++ b/ref3.css
@@ -105,6 +105,7 @@
 	flex: 4;
 	padding: 1vw;
 	box-sizing: border-box;
+	min-width: 0;
 }
 
 /**************************************************************************/
