--- a/ref-tooltip.css
+++ b/ref-tooltip.css
@@ -29,7 +29,8 @@
     	visibility: hidden;
     	opacity: 0;
     	position: absolute;
-    	background-color: rgba(230, 165, 126, 0.95);
+    	/* background-color: rgba(230, 165, 126, 0.95); */
+		background-color: rgba(220, 240, 255, 0.95);
     	color: black;
     	padding: 0.6vw;
 		padding-top: 0;
