--- a/ref4.css
+++ b/ref4.css
@@ -85,6 +85,7 @@
 	flex: 4;
 	padding: 1vw;
 	box-sizing: border-box;
+	min-width: 0;
 }
 
 /**************************************************************************/
