--- a/enginautom1.css
+++ b/enginautom1.css
@@ -4,6 +4,7 @@
     	height: auto;
     	min-height: 100%;
     	font-size: clamp(16px, 1.6vw, 30px);
+		font-weight: 200;
     	padding: 1vw 2vw;
     	box-sizing: border-box;
     	background:
@@ -80,7 +81,7 @@
 
 
     .enginautom1-right strong {
-    	font-weight: bold;
+    	font-weight: 500;
     }
 
     .enginautom1-right-last {
