--- a/enginext1.css
+++ b/enginext1.css
@@ -3,6 +3,7 @@
     	height: auto;
     	min-height: 100%;
     	font-size: clamp(16px, 1.6vw, 30px);
+		font-weight: 200;
     	padding: 1vw 2vw;
     	box-sizing: border-box;
     	background:
@@ -57,7 +58,7 @@
     }
 
     .enginext1-right strong {
-    	font-weight: bold;
+    	font-weight: 500;
     }
 
     .enginext1-right-last {
