--- a/ref-tooltip.css
+++ b/ref-tooltip.css
@@ -2,7 +2,8 @@
     	display: grid;
     	grid-template-columns: repeat(6, 1fr);
     	grid-auto-rows: auto;
-    	gap: calc(0.5vw + 40px) 2vw;
+    	gap: 2.5vw 2vw;
+    	/* gap: calc(0.5vw + 40px) 2vw; */
     	justify-content: center;
     	align-items: start;
     	max-width: 1200px;
@@ -22,6 +23,7 @@
     	border: 1px solid #00C;
     	background-color: transparent;
     	container-type: inline-size;
+		/* overflow: hidden; */
     	box-sizing: border-box;
     }
 
@@ -60,6 +62,7 @@
     	position: absolute;
     	bottom: 0;
     	width: 100%;
+		object-fit: contain;
     }
 
 	.ref-tooltip-company {
