--- a/enginautom1.css
+++ b/enginautom1.css
@@ -7,10 +7,16 @@
 		font-weight: 200;
     	padding: 1vw 2vw;
     	box-sizing: border-box;
-    	background:
+    	/* background:
     		linear-gradient(to bottom, #1848A0 0%, #040411 100%),
     		linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
-    	background-blend-mode: multiply;
+    	background-blend-mode: multiply; */
+		background:
+			linear-gradient(to right,
+				rgba(0, 0, 0, 0) 0%,
+				rgba(0, 0, 0, 0.3) 100%),
+			#1848A0;
+		background-blend-mode: multiply;
     }
 
     .enginautom1-header-line {
