--- a/it2.css
+++ b/it2.css
@@ -94,6 +94,10 @@
 
     /* Responsívny režim */
     @media (max-width: 600px) {
+		.it2-body h2 {
+			font-size: 6vw;
+		}
+
     	.it2-grid {
     		grid-template-columns: 1fr;
     		grid-template-areas:
