--- a/it3.css
+++ b/it3.css
@@ -128,7 +128,11 @@
 
    /* Responsívny režim ******************************************************************************/
    @media (max-width: 600px) {
-   	.it3-grid {
+	.it3-body h1 {
+		font-size: 6vw;
+	}
+
+	.it3-grid {
    		grid-template-columns: 1fr;
    		grid-template-areas:
    			"p1"
