--- a/it5.css
+++ b/it5.css
@@ -25,3 +25,10 @@
    	--hover-color: white;
    	--underline-color: white;
    }
+
+   /* Responsívny režim ******************************************************************************/
+   @media (max-width: 600px) {
+	.it5-body h1 {
+		font-size: 6vw;
+	}
+	}
