--- a/kontakt1.css
+++ b/kontakt1.css
@@ -34,7 +34,7 @@
     }
 
     .kontakt1-top-left h1 {
-    	font-size: clamp(2rem, 1.3rem + 2.4vw, 3.2rem);
+    	font-size: clamp(1.6rem, 3.4vw, 3.6rem);  /* clamp(1.2rem, 3vw, 3rem); */
     	font-weight: 600;
     	/*h1 má predvolený prehliadačový štýl s font-weight: bold (700), preto sa musi natvrdo prepisat (<p> nema predvoleny font-weight)*/
     	margin-top: 1rem;
