--- a/kontakt3.css
+++ b/kontakt3.css
@@ -1,9 +1,16 @@
     .kontakt3-body {
     	font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-    	padding: 1vw;
-    	font-size: 1rem;
+    	padding: 1vw 2vw;
+    	font-size: clamp(0.7rem, 1.6vw, 3rem);
     	width: 100%;
     	box-sizing: border-box;
+    }
+
+    .kontakt3-body h1 {
+    	font-size: clamp(1.2rem, 3vw, 3rem);
+    	font-weight: 500;
+    	margin: 0 0 1.5vw 0;
+    	text-align: left;
     }
 
     .kontakt3-title {
@@ -19,18 +26,21 @@
 
     .kontakt3-grid {
     	display: grid;
-    	grid-template-columns: repeat(4, 200px);
-    	max-width: 850px;
-    	padding: 10px;
-    	gap: 10px;
+		font-size: clamp(0.7rem, 1.6vw, 2rem);
+    	grid-template-columns: repeat(4, 12.5em); /* repeat(4, 200px); */
+    	max-width: 53.125em; /* 850px; */
+    	/* padding: 0.625em; */ /* 10px */
+    	gap: 0.625em;
     }
 
     .kontakt3-grid-img {
     	display: grid;
-    	grid-template-columns: repeat(4, 200px);
-    	max-width: 850px;
-    	padding: 10px;
-    	gap: 10px;
+		font-size: clamp(0.7rem, 1.6vw, 2rem);
+    	grid-template-columns: repeat(4, 12.5em); /* repeat(4, 200px); */
+    	max-width: 53.125em; /* 850px; */
+    	padding: 0.625em; /* 10px */
+		padding-left: 0;
+    	gap: 0.625em;
     }
 
     .kontakt3-grid-img .img-special-span {
@@ -45,13 +55,14 @@
     	justify-content: space-between;
     	/* rozdelí horný a dolný blok */
     	border: 1px solid #ccc;
-    	padding: 6px;
+		border-radius: 0.5em;
+    	padding: 0.375em; /* 6px */
     	box-sizing: border-box;
     	width: 100%;
     }
 
     .kontakt3-cell p {
-    	margin: 3px;
+    	margin: 0.1875em; /*3px*/
     }
 
     .align-top {
@@ -67,43 +78,46 @@
     	align-items: bottom;
     	justify-content: bottom;
     	overflow: hidden;
-    	/* max-width: 620px; */
-    	/* border: 1px dashed red; */
+		border-radius: 0.5em;
     }
+
+	.kontakt3-cell,
+	.kontakt3-cell-img {
+		box-shadow: 0 0 0.2em 0.1em rgb(200, 240, 255, 1);		
+	}
 
     .kontakt3-image {
     	width: 100%;
     	height: 100%;
     	object-fit: contain;
-    	/* zobrazí celý obrázok, bez orezania */
     	display: block;
     }
 
     /*********************************************************************************/
     .kontakt3-invoice-data {
-    	/* font-family: Arial, sans-serif; */
-    	max-width: 850px;
-    	padding: 16px;
+    	max-width: 53.125em; /* 850px; */
+    	padding: 1em; /* 16px; */
     	border: 1px solid #ccc;
-    	border-radius: 8px;
+    	border-radius: 0.5em; /* 8px; */
     	background: #fafafa;
-    	margin-top: 1vw;
+    	margin-bottom: 0.6em;
+		box-shadow: 0 0 0.2em 0.1em rgb(200, 240, 255, 1);		
     	box-sizing: border-box;
     }
 
     .kontakt3-invoice-data .section-title {
     	font-weight: bold;
     	font-size: 1.2em;
-    	margin-bottom: 12px;
+    	margin-bottom: 0.75em /* 12px; */
     }
 
     .kontakt3-invoice-data p {
-    	margin: 2px 0;
+    	margin: 0.125em 0;
     }
 
     .kontakt3-invoice-data .label {
     	font-weight: bold;
-    	margin-right: 6px;
+    	margin-right: 0.375em; /* 6px; */
     }
 
     .kontakt3-invoice-data .value {
@@ -111,7 +125,7 @@
     }
 
     .kontakt3-invoice-data .line-gap {
-    	height: 1vw;
+    	height: 1em;
     }
 
     /*********************************************************************************/
@@ -126,23 +140,19 @@
     		/* prvy az druhy stlpec */
     	}
 
-    	/* .kontakt3-cell-img {
-    		max-width: 420px;
-    	} */
-
     	.kontakt3-invoice-data {
     		margin-right: 6px;
     	}
     }
 
     @media (max-width: 480px) {
-    	.kontakt3-body {
+    	/* .kontakt3-body {
     		font-size: 0.7rem;
-    	}
+    	} */
 
     	.kontakt3-grid,
 		.kontakt3-grid-img {
-    		grid-template-columns: repeat(2, 143px);
+    		grid-template-columns: repeat(2, 160px);
     		padding: 0;
     		padding-bottom: 10px;
     	}		
