--- a/manage.css
+++ b/manage.css
@@ -1,11 +1,11 @@
     .manage-grid-body {
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-      font-weight: 200;
-      color: white;
-      padding: 4vw 6vw;
-      width: 100%;
-      box-sizing: border-box;
-      background: linear-gradient(
+    	font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+    	font-weight: 200;
+    	color: white;
+    	padding: 4vw 6vw;
+    	width: 100%;
+    	box-sizing: border-box;
+    	/* background: linear-gradient(
         to bottom,
         #10AEEA 0%,
         #040411 100%
@@ -15,118 +15,124 @@
         rgba(0,0,0,0) 0%,
         rgba(0,0,0,0.3) 100%
       );
-      background-blend-mode: multiply;
+      background-blend-mode: multiply; */
+    	background:
+    		linear-gradient(to right,
+    			rgba(0, 0, 0, 0) 0%,
+    			rgba(0, 0, 0, 0.3) 100%),
+    		#1848A0;
+    	background-blend-mode: multiply;
     }
 
     .manage-line {
-      height: 1px;
-      background-color: #999;
-      width: 100%; 
-      margin-bottom: 3vw;
+    	height: 1px;
+    	background-color: #999;
+    	width: 100%;
+    	margin-bottom: 3vw;
     }
 
     .manage-grid-body h3 {
-      font-size: 2.2vw;
-      font-weight: 300;
-      margin-bottom: 3vw;
-      text-align: left;
+    	font-size: 2.2vw;
+    	font-weight: 300;
+    	margin-bottom: 3vw;
+    	text-align: left;
     }
 
     .manage-grid-body h1 {
-      font-size: 4.5vw;
-      font-weight: 300;
-      margin-bottom: 5vw;
-      text-align: left;
+    	font-size: 4.5vw;
+    	font-weight: 300;
+    	margin-bottom: 5vw;
+    	text-align: left;
     }
 
     .manage-grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2vw;
-      width: 100%;
-      align-items: start;
+    	display: grid;
+    	grid-template-columns: 1fr 1fr;
+    	gap: 2vw;
+    	width: 100%;
+    	align-items: start;
     }
 
     .manage-text {
-      text-align: left;
+    	text-align: left;
     }
 
     .manage-text p {
-      font-size: 1.6vw;
-      line-height: 1.8;
-      margin: 0 0 1.5vw 0;
+    	font-size: 1.6vw;
+    	line-height: 1.8;
+    	margin: 0 0 1.5vw 0;
     }
 
     .manage-bullets {
-      list-style: none;
-      padding: 0;
-      margin-top: 2vw;
+    	list-style: none;
+    	padding: 0;
+    	margin-top: 2vw;
     }
 
     .manage-bullets li {
-      position: relative;
-      padding-left: 2vw;
-      margin-bottom: 1vw;
-      font-size: 1.5vw;
-      line-height: 1.8;
+    	position: relative;
+    	padding-left: 2vw;
+    	margin-bottom: 1vw;
+    	font-size: 1.5vw;
+    	line-height: 1.8;
     }
 
     .manage-bullets li::before {
-      content: "•";
-      position: absolute;
-      left: 0;
-      top: 0;
-      color: white;
-      font-size: 1.5vw;
-      line-height: 1.8;
+    	content: "•";
+    	position: absolute;
+    	left: 0;
+    	top: 0;
+    	color: white;
+    	font-size: 1.5vw;
+    	line-height: 1.8;
     }
 
     .manage-image {
-      position: relative;
+    	position: relative;
     }
 
     .manage-image img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      object-position: center;
-      display: block;
+    	width: 100%;
+    	height: auto;
+    	object-fit: cover;
+    	object-position: center;
+    	display: block;
     }
 
     .manage-link {
-      text-align: right;
-      margin-top: 2vw;
+    	text-align: right;
+    	margin-top: 2vw;
     }
 
     .manage-link a {
-      color: #ACF;
-      text-decoration: none;
-      font-size: 1.6vw;
+    	color: #ACF;
+    	text-decoration: none;
+    	font-size: 1.6vw;
     }
 
     @media (max-width: 600px) {
-      .manage-grid {
-        grid-template-columns: 1fr;
-      }
+    	.manage-grid {
+    		grid-template-columns: 1fr;
+    	}
 
-      .manage-grid-body h3 {
-        font-size: 5vw;
-      }
+    	.manage-grid-body h3 {
+    		font-size: 5vw;
+    	}
 
-      .manage-grid-body h1 {
-        font-size: 7vw;
-      }
+    	.manage-grid-body h1 {
+    		font-size: 7vw;
+    	}
 
-      .manage-text p,
-      .manage-bullets li {
-        font-size: 4vw;
-      }
+    	.manage-text p,
+    	.manage-bullets li {
+    		font-size: 4vw;
+    	}
 
-      .manage-link {
-        text-align: left;
-      }
+    	.manage-link {
+    		text-align: left;
+    	}
 
-      .manage-link a {
-        font-size: 4vw;
-      }
+    	.manage-link a {
+    		font-size: 4vw;
+    	}
     }
