--- a/ref-tooltip.css
+++ b/ref-tooltip.css
@@ -57,14 +57,43 @@
     	visibility: visible;
     	opacity: 1;
     }
-
-    .ref-tooltip-image {
+	/**********************************************************************************************************/
+    /* .ref-tooltip-image {
     	position: absolute;
     	bottom: 0;
-    	width: 100%;
+    	max-width: 100%;
+    	max-height: 100%;
 		object-fit: contain;
-    }
+    } */
+	.ref-tooltip-image {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		max-width: 100%;
+		max-height: 100%;
+		transform: translate(-50%, -50%);
+		object-fit: contain;
+    	box-sizing: border-box;
+	}
 
+	.ref-tooltip-img-wrapper {
+		position: absolute;
+		inset: 0;
+		overflow: hidden;
+		background-color: transparent;
+		padding: 0;
+	}
+
+	/* .ref-tooltip-img-wrapper .ref-tooltip-image {
+		width: 100%;
+		height: 101%;
+		max-height: 101;
+		object-fit: cover;
+		object-position: center;
+		margin: 0;
+		display: block;
+	}
+ */
 	.ref-tooltip-company {
 		text-align: left;
 		font-weight: bold;
