--- a/ref2.css
+++ b/ref2.css
@@ -3,6 +3,7 @@
   padding: 2rem;
   background-color: #E8F4FF;
   color: #333;
+  /* border:1px dashed red; */
 }
 
 .ref2-header p {
@@ -54,7 +55,7 @@
 
 .ref2-left-group {
 	position: relative;
-	aspect-ratio: 2 / 1;
+	aspect-ratio: 10 / 6;
 	width: 100%;
 	max-width: 600px;
 	justify-self: center;
